@startuml class_diagram

class Book {
  - title: String
  - author: String
  - publisher: String
  - year: int
  - isbn: String
  - category: String
  + search()
  + getInfo()
}

class Copy {
  - copyId: String
  - status: String
  - condition: String
  + updateStatus()
}

class Reader {
  - readerId: String
  - name: String
  - contact: String
  - status: String
  + reserveBook()
  + renewLoan()
}

class Librarian {
  - librarianId: String
  - login: String
  + addBook()
  + processLoan()
  + generateReport()
}

class Loan {
  - loanId: String
  - issueDate: Date
  - dueDate: Date
  - returnDate: Date
  + calculateFine()
}

class Reservation {
  - reservationId: String
  - reservationDate: Date
  - status: String
}

class Fine {
  - fineId: String
  - amount: float
  - status: String
  + processPayment()
}

Book "1" *-- "0..*" Copy
Reader "1" *-- "0..*" Loan
Copy "1" *-- "0..*" Loan
Librarian "1" *-- "0..*" Loan
Reader "1" *-- "0..*" Reservation
Book "1" *-- "0..*" Reservation
Reader "1" *-- "0..*" Fine

@enduml